Bug 1693154 - Remove unneeded nsAbOutlookDirectory::CommitAddressList(). r=darktrojan

--HG--
extra : rebase_source : 42fc56662d0be56d0743f2e7c76e93ae516cb7ca