mailnews/addrbook/src/nsAbOutlookDirectory.h
@@ -78,8 +78,6 @@ class nsAbOutlookDirectory : public nsAbDirProperty,  // nsIAbDirectory
   nsresult NotifyCardPropertyChanges(nsIAbCard* aOld, nsIAbCard* aNew);
   nsresult commonNotification(nsISupports* aItem, const char* aTopic,
                               const char* aNotificationUID);
-  // Force update of MAPI repository for mailing list
-  nsresult CommitAddressList(void);
   // Read MAPI repository
   nsresult UpdateAddressList(void);
   // Utility to produce a card from a URI.
